# StructureInsight

./: .gitignore  CMakeLists.txt  main.cpp  project_build.sh  stereonet.cpp  stereonet.h  stereonetwidget.cpp  stereonetwidget.h
